# python-project-50

./: .coveragerc  .gitignor  .gitignore  Makefile  README.md  pyproject.toml  record.cast
.github/workflows/: lint_and_test.yml
gendiff/: __main__.py  diff_builder.py  gendiff.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: diff_builder.py  gendiff.py  parser.py  parsers.py
gendiff/scripts/formatters/: init.py
tests/: test_cli.py  test_cli_integration.py  test_error_cases.py  test_formatters.py  test_gendiff.py  test_gendiff_comprehensive.py  test_gendiff_format_selection.py  test_import_all.py  test_json_formatter.py  test_main_coverage.py  test_nested_gendiff.py  test_parsers.py  test_plain_formatter.py  test_yaml_gendiff.py
tests/fixtures/: test_nested_gendiff.py  test_plain_formatter.py
